--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,11 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": "off",
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/no-misused-promises": "off",
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/promise-function-async": "off",
+        "@typescript-eslint/explicit-function-return-type": "off"
     }
 }
